@@ -282,6 +282,10 @@ this cache can be disabled on a per-application basis using tunables
 (set glibc.malloc.tcache_count to zero), this option can be used to
 remove it from the build completely.
 
+@item --disable-scv
+Disable using @code{scv} instruction for syscalls. All syscalls will use
+@code{sc} instead, even if the kernel supports @code{scv}. PowerPC only.
+
 @item --build=@var{build-system}
 @itemx --host=@var{host-system}
 These options are for cross-compiling.  If you specify both options and
